Remove backend cart functionality and update docs
Eliminates all backend and database support for shopping cart, including controllers, services, entities, and repositories related to cart management. Updates documentation to reflect the new architecture, which relies solely on frontend localStorage for cart operations. Adds new guides and scripts for testing and database cleanup, and centralizes CORS configuration. Also includes improvements and corrections to error handling, authentication, and file upload endpoints.